# careecon_mania

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: sync-repos.md
.github/workflows/: ci.yml
docs/: README.md  knowledge_base_design.md  roadmap.md  system_overview.md  use_cases.md  vision.md
docs/reference/: phase1_frontend_extraction.md  phase2_dynamic_twin.md
knowledge/: README.md
knowledge/domains/auth/: guest-registration.md
knowledge/domains/board/: overview.md
knowledge/domains/schedule/: print.md  progress-link.md
knowledge/navigation/: routes.md
knowledge/patterns/: service-layer.md
scripts/: _login.py  capture.py  check_drift.py  knowledge.py  sync_repos.sh
src/careecon_mania/: __init__.py
temp/: デザイナーMTG_論点整理_20260701.md  デザイナー指示_LockOverride戻すUI.md  デザイナー指示_残業割増設定UI.md  工事台帳_設計もやもや整理.md  工事台帳_設計雨降って地固まる.md  工事台帳モック（修正版）.mhtml  設計_cost_priceマイグレーション.md
tests/: test_package.py
