[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "careecon-mania"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

# ---------------------------------------------------------------------------
# Ruff — 鬼厳しい設定
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
# 有効にするルールセット（網羅的・厳格）
select = [
    "F",     # pyflakes
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "C90",   # mccabe complexity
    "I",     # isort
    "N",     # pep8-naming
    "D",     # pydocstring
    "UP",    # pyupgrade
    "ANN",   # flake8-annotations
    "ASYNC", # flake8-async
    "S",     # flake8-bandit (security)
    "BLE",   # flake8-blind-except
    "FBT",   # flake8-boolean-trap
    "B",     # flake8-bugbear
    "A",     # flake8-builtins
    "COM",   # flake8-commas
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "T10",   # flake8-debugger
    "EM",    # flake8-errmsg
    "EXE",   # flake8-executable
    "FA",    # flake8-future-annotations
    "ISC",   # flake8-implicit-str-concat
    "ICN",   # flake8-import-conventions
    "LOG",   # flake8-logging
    "G",     # flake8-logging-format
    "INP",   # flake8-no-pep420
    "PIE",   # flake8-pie
    "T20",   # flake8-print
    "PYI",   # flake8-pyi
    "PT",    # flake8-pytest-style
    "Q",     # flake8-quotes
    "RSE",   # flake8-raise
    "RET",   # flake8-return
    "SLF",   # flake8-self
    "SLOT",  # flake8-slots
    "SIM",   # flake8-simplify
    "TID",   # flake8-tidy-imports
    "TCH",   # flake8-type-checking
    "INT",   # flake8-gettext
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
    "TD",    # flake8-todos
    "FIX",   # flake8-fixme
    "ERA",   # eradicate (commented-out code)
    "PD",    # pandas-vet
    "PGH",   # pygrep-hooks
    "PL",    # pylint
    "TRY",   # tryceratops
    "FLY",   # flynt
    "NPY",   # numpy
    "FAST",  # fastapi
    "AIR",   # airflow
    "PERF",  # perflint
    "FURB",  # refurb
    "RUF",   # ruff-specific
]

ignore = [
    # docstring: 最初の行に summary を強制（D200系と競合するため調整）
    "D105",   # Missing docstring in magic method
    "D107",   # Missing docstring in __init__
    "D203",   # 1 blank line required before class docstring (D211と競合)
    "D213",   # Multi-line docstring summary should start at the second line (D212と競合)
    # TODOは許容するが FIX002 (FIXME) は厳格に残す
    "TD002",  # Missing author in TODO
    "TD003",  # Missing issue link on the line following this TODO
    # テストでの assert は許容
    "S101",   # Use of `assert` detected
]

# 自動修正を禁止するルール（意図的に直させる）
unfixable = [
    "ERA001", # commented-out code → 手動削除させる
    "F401",   # unused import → 手動削除させる
    "F841",   # unused variable → 手動削除させる
    "T20",    # print 文 → 手動削除させる
    "FIX002", # FIXME → 解決させる
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ANN",    # テストは型アノテーション免除
    "D",      # テストは docstring 免除
    "S101",   # テストでの assert は許容（CI の `--select S` 単独実行でも効くよう per-file-ignores に置く）
    "SLF001", # private メンバーへのアクセス許容
    "PLR2004",# magic value 許容
    "FBT",    # boolean trap 許容
    "ARG",    # unused argument 許容 (pytest fixture)
    "PT",     # pytest style は tests 内で緩和
]
"**/__init__.py" = [
    "D104",   # Missing docstring in public package
]
"scripts/**/*.py" = [
    "T20",    # print 文は CLI として意図的
    "S603",   # subprocess は意図的
    "S607",   # partial path は意図的
    "ANN",    # スクリプトは型アノテーション免除
    "D",      # スクリプトは docstring 免除
    "INP001", # __init__.py なし許容
    "RUF001", # 日本語全角括弧は意図的
    "RUF002", # 日本語全角括弧は意図的
    "RUF003", # 日本語全角括弧は意図的
]

[tool.ruff.lint.mccabe]
max-complexity = 8  # デフォルト10より厳格

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["classmethod", "pydantic.validator", "pydantic.root_validator"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["careecon_mania"]
force-sort-within-sections = true
split-on-trailing-comma = true

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = false
ignore-fully-untyped = false
suppress-dummy-args = false

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Header"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"  # 相対インポート全面禁止

[tool.ruff.lint.pylint]
max-args = 6          # 引数上限（デフォルト5より少し緩め）
max-branches = 10
max-returns = 5
max-statements = 40

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = 80

# ---------------------------------------------------------------------------
# Mypy — 鬼厳しい設定
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"

# strict モードを全て有効化
strict = true

# strict に含まれないが追加で有効化する設定
disallow_any_unimported = true      # 未インポート型の Any 禁止
disallow_any_expr = false           # 式レベルは現実的に緩める（strict は厳しすぎる場合も）
disallow_any_decorated = true       # デコレータ経由の Any 禁止
disallow_any_explicit = true        # 明示的 Any 禁止
disallow_subclassing_any = true     # Any のサブクラス化禁止
warn_unreachable = true             # 到達不能コードを警告
warn_no_return = true               # return 漏れを警告

# 追加の厳格設定
strict_equality = true              # == 演算子の型を厳密にチェック
extra_checks = true                 # 追加チェック有効化

# エラー表示
show_error_codes = true
show_column_numbers = true
show_error_context = true
pretty = true
color_output = true
error_summary = true

# キャッシュ
cache_dir = ".mypy_cache"
sqlite_cache = true

# インポート
follow_imports = "normal"
ignore_missing_imports = false  # 型スタブがないライブラリはエラー

[[tool.mypy.overrides]]
module = "tests.*"
disallow_any_explicit = false   # テストでの Any は許容
disallow_untyped_decorators = false

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--tb=short",
    "--cov=src",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=xml",
    "--cov-fail-under=90",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
]
filterwarnings = [
    "error",   # すべての warning を error として扱う
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.0",
    "pre-commit>=4.0.0",
    "playwright>=1.60.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
]
